--- a/src/css/_variable.scss
+++ b/src/css/_variable.scss
@@ -10,6 +10,7 @@ $darkgreen:                 #39482f;
 $darkred:                   #6c1400;
 $white:                     #ffffff;
 $black:                     #0e0101;
+$blue:                      #5973bc;
 
 $darkgrey:                  #222222;
 $grey:                      #3f3f3f;
