--- a/src/css/blocks/_project.scss
+++ b/src/css/blocks/_project.scss
@@ -53,6 +53,7 @@
             }
         }
         &__task{
+            flex-wrap: wrap;
             &__item{
                 flex: 0 0 80px;
                 max-width: 80px;
