--- a/src/css/elements/_indent.scss
+++ b/src/css/elements/_indent.scss
@@ -1,5 +1,6 @@
 .margin-top{margin-top: 60px;}
 .margin-bottom{margin-bottom: 60px;}
+.margin-bottom-small{margin-bottom: 30px;}
 .margin-auto{margin: 0 auto;}
 
 .content .offer{
