--- a/src/dev.pug
+++ b/src/dev.pug
@@ -107,43 +107,42 @@ html(lang="ru", dir="ltr")
                     .container.content_price__container
                         .row
                             .col-xl-6.offset-xl-2.text-center.margin-bottom
-                                .heading.heading_small Комплексная разработка сайта
+                                .heading.heading_small Для тех, у кого уже есть дизайн
                                 .offer Мы пропагандируем индивидуальный расчет стоимости каждого проекта, но знаем вы хотите видеть хотя бы примерные цены поэтому немного цифр
                         .row.align-items-center.justify-content-center
                             .col-xl-3.col-lg-3.p-relative
-                                img.element.element_1(src="../images/comment/dev_comment_0.png")
                                 .price
-                                    .price__header Лендинг
+                                    .price__header Верстка
                                     .price__content
-                                        p.text-uppercase.text-bold В разработку входит
-                                        p прототипирование страницы, индивидуальный дизайн, разработка УТП, 
-                                            | анализ конкурентов, продающие тексты и&nbsp;верстка страницы
-                                        p Что-то еще тут написать для баланса
-                                    .price__time от 7 дней
-                                    .price__footer стоимость 13к+(за 3-4 экрана)
+                                        p.text-uppercase.text-bold Минимальные техтребования
+                                        p — Стандарты HTML5 (проходит валидацию), CSS3 
+                                        p — Flexbox / Grid / Float
+                                        p — Отзывчивая (адаптивная) верстка
+                                        p — Соответствие верстки утвержденным дизайн-макетам
+                                    .price__time от 1 дня
+                                    .price__footer стоимость после ТЗ
                             .col-xl-3.col-lg-4.p-relative
-                                img.element.element_2(src="../images/comment/dev_comment_2.png")
                                 .price.price_large
-                                    .price__header Сайт-визитка
+                                    .price__header Верстка + CMS
                                     .price__content
                                         p.text-uppercase.text-bold В разработку входит
-                                        p прототипирование страницы, индивидуальный дизайн, разработка УТП, 
-                                            | анализ конкурентов, продающие тексты и&nbsp;верстка страницы
-                                        p Что-то еще тут написать для баланса
-                                    .price__time от 10 дней
+                                        p Базовая настройка системы управления и&nbsp;верстка страниц, полностью соответствующая 
+                                            | макетам. Как результат - сайт готовый к работе, дальнейшей оптимизации и 
+                                            | запуску рекламной кампании в Яндекс и Google.
+                                    .price__time от 5 дней
                                     .price__info контент предоставляется заказчиком
-                                    .price__footer стоимость 45к+
+                                    .price__footer стоимость 8к+
                             .col-xl-3.col-lg-3.p-relative
-                                img.element.element_3(src="../images/comment/dev_comment_1.png")
                                 .price
-                                    .price__header Магазин
+                                    .price__header CMS
                                     .price__content
-                                        p.text-uppercase.text-bold В разработку входит
-                                        p прототипирование страницы, индивидуальный дизайн, разработка УТП, 
-                                            | анализ конкурентов, продающие тексты и&nbsp;верстка страницы
-                                        p Что-то еще тут написать для баланса
-                                    .price__time от 20 дней
-                                    .price__footer стоимость 66к+
+                                        p.text-uppercase.text-bold Базовая настройка включает
+                                        p — один пользователь-администратор
+                                        p — плагины для обновления и бекапов шаблонов страниц
+                                        p — минификация css и js файлов
+                                        p — плагины для транслитерации, отправки форм, SEO-продвижения
+                                    .price__time от 4 дней
+                                    .price__footer стоимость 5к+
                     .container.content_price__container
                         .row.margin-bottom.margin-bottom.margin-bottom-sm-none
                             .col-xl-6.offset-xl-2.text-center
