--- a/src/marketing.pug
+++ b/src/marketing.pug
@@ -123,7 +123,7 @@ html(lang="ru", dir="ltr")
                                     .project__task__content 
                                         p.offer Проработать маркетинговую составляющую сайта: разработка УТП, преимуществ, продающих текстов и форм. Сделать его привлекательным, наполнить актуальной информацией, подготовить все страницы к запуску рекламы. 
                                         p.offer Настроить рекламную кампанию, повысить число заявок с нее и из поисковых систем.
-                                        ul
+                                        ul.offer.last
                                             li переработать всю информацию на сайте для повышения количества заявок;
                                             li улучшить общее восприятие информации;
                                             li изменить дизайн сайта на более современный и&nbsp;внушающий&nbsp;доверие
@@ -189,6 +189,12 @@ html(lang="ru", dir="ltr")
                                 form.form.form_inline(action="")
                                     input.in-phone.input-text(type="tel" placeholder="Ваш контактный телефон" value="")
                                     button.btn.btn_primary(type="submit") Да, нужны
+                                    .policy
+                                        input(type="hidden" name="agree[]" value="")
+                                        input.policy__checkbox#policy(type="checkbox" name="agree[]" checked="")
+                                        label.policy__offer(for="policy") согласен с 
+                                            a.link(href="/privacy-policy-websoho.pdf" title="Соглашение на обработку персональных данных") обработкой персональных данных
+                                            
                             .col-xl-3
                                 .offer.last Многие компании, предлагая свои услуги, говорят о том, какие они классные. Мы в первую очередь думаем о вас и вашем комфорте от сотрудничества с SOHO. Поэтому мы расскажем о том, что вы получите, обратившись к нам.
         include chunks/footer.pug
