--- a/src/marketing.pug
+++ b/src/marketing.pug
@@ -1,5 +1,14 @@
 html(lang="ru", dir="ltr")
-    include chunks/head.pug
+    head
+        meta(charset="UTF-8")
+        meta(name="viewport", content="width=device-width, initial-scale=1.0")
+        meta(http-equiv="X-UA-Compatible", content="ie=edge")
+        title SOHO студия
+
+        link(href='./css/jquery.fancybox.min.css', rel='stylesheet')
+        link(href='./css/jquery.jscrollpane.css', rel='stylesheet')
+        link(href='./css/framework.css', rel='stylesheet')
+        link(href='./css/marketing.css', rel='stylesheet')
     body.marketing
         script(src="./js/jquery.min.js")
         script(src="./js/jquery.inputmask.js")
