--- a/src/blog_inside.pug
+++ b/src/blog_inside.pug
@@ -74,7 +74,7 @@ html(lang="ru", dir="ltr")
                             rect(x="97" y="9.5" width="71" height="160")            
                 section.container.post__container
                     .row.justify-content-center
-                        .col-sm-10.col-xl-8
+                        .col-md-10.col-xl-7
                             .page__image(style="background-image:url('../images/image_blog.png');")
                             .page__info
                                 .page__breadcrumb.breadcrumb
@@ -91,15 +91,40 @@ html(lang="ru", dir="ltr")
                             .page__content
                                 h1.heading 6 способов прокачать первый экран на вашем сайте
                                 p Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?
-                                blockquote Первое, на что обращает внимание посетитель сайта — первый экран. Это — визитная карточка всего сайта. Остальной контент пользователь увидит потом, поэтому важно заинтересовать его с первых секунд. В данной статье предлагаем вам простые способы сделать дизайн главной страницы и особенно первого экрана качественным и информативным.
-                                img.img-fluid.img-border(src='../images/test-02.jpg' alt="" title="")
+                                blockquote Первое, на что обращает внимание посетитель сайта — первый экран. Это — визитная карточка всего сайта. Остальной контент пользователь увидит потом, поэтому важно заинтересовать его с первых секунд. 
+                                p В данной статье предлагаем вам простые способы сделать дизайн главной страницы и особенно первого экрана качественным и информативным.
+                                p
+                                    img.img-fluid.img-border(src='../images/test-02.jpg' alt="" title="")
+                                p.text-center.text-small.text-grey Я тут не сразу заметила сердечко – а в нем, надо полагать, весь цимес
                                 h2 Заголовок h2
-                                p Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?
+                                p.info Вспомним строгий парижский логотип – он ведь совсем не для туристов. С кораблем и темным синим цветом себя ассоциируют только сами французы. Для праздно любопытствующих приезжих есть отдельная айдентика, попсовая.
+                                p Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?
+                                ul 
+                                    li контент, который вы разместите на «первом экране». Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. 
+                                    li контент, который вы разместите на «первом экране». 
+                                    li контент, который вы разместите на «первом экране». 
+                                p.text-small Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) 
+                                    | или перемещаться по странице. 
                                 h3 Заголовок h3
                                 p Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?
+                                ol 
+                                    li контент, который вы разместите на «первом экране». 
+                                    li контент, который вы разместите на «первом экране». 
+                                    li контент, который вы разместите на «первом экране». 
                                 h4 Заголовок h4
                                 p Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?
+                                blockquote Тот контент, который вы разместите на «первом экране», является ключом к успеху 
+                                    | сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) 
+                                    | или перемещаться по странице. Что должен увидеть пользователь на экране?
                                 h5 Заголовок h5
+                                ul.info.info_yandex 
+                                    li Конверсия в заявку: 3,2 %
+                                    li Количество заявок: 35
+                                    li Стоимость одной заявки: 850 рублей
+                                ul.info.info_google 
+                                    li Конверсия в заявку: 3,2 %
+                                    li Количество заявок: 35
+                                    li Стоимость одной заявки: 850 рублей
                                 p Тот контент, который вы разместите на «первом экране», является ключом к успеху сайта. Дизайн может заманить, заставить юзера нажимать (на нужные кнопки) или перемещаться по странице. Что должен увидеть пользователь на экране, прежде чем захочет пролистать страницу?
             aside.post-preview
                 .container
