--- a/public/css/framework.css
+++ b/public/css/framework.css
@@ -1811,7 +1811,7 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Open Sans", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "Open Sans", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.3;
@@ -2156,6 +2156,10 @@ template {
   color: #5973bc;
 }
 
+.text-grey {
+  color: #858585;
+}
+
 .text-uppercase {
   text-transform: uppercase;
 }
@@ -2170,6 +2174,10 @@ strong, b, .text-bold {
 
 .text-wrap {
   white-space: nowrap;
+}
+
+.text-small {
+  font-size: 90%;
 }
 
 /* Media */
@@ -2489,7 +2497,7 @@ strong, b, .text-bold {
 
 .btn {
   display: inline-block;
-  font-size: 18px;
+  font-size: 16px;
   font-weight: 700;
   text-align: center;
   text-transform: uppercase;
@@ -2529,7 +2537,6 @@ strong, b, .text-bold {
 /* Media */
 @media (max-width: 1400px) {
   .btn {
-    font-size: 16px;
     padding: 15px 40px;
   }
 }
@@ -2836,6 +2843,10 @@ a {
 
 a:hover, a:focus {
   outline: none;
+}
+
+a:visited {
+  color: #5973bc;
 }
 
 .d-flex {
