--- a/src/css/_variable.scss
+++ b/src/css/_variable.scss
@@ -1,4 +1,3 @@
-$blue:                      #52dfee;
 $yellow:                    #fdc830;
 $red:                       #d70000;
 $pink:                      #fa21a1;
@@ -42,7 +41,7 @@ $container-max-widths: (
 $body-color:                #343434;
 $body-bg:                   #fafafa;
 
-$font-family-base: -apple-system, BlinkMacSystemFont, "Segoe UI", "Open Sans", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
+$font-family-base: "Open Sans", "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
 $font-family-monospace:       SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace !default;
 $font-family-base:            $font-family-sans-serif !default;
 
