--- a/src/component/btn/_btn.scss
+++ b/src/component/btn/_btn.scss
@@ -3,8 +3,10 @@
     outline: none;
     box-shadow: none;
 
-    font-weight: $font-weight-bolder;
     font-family: $font-family-heading;
+    font-size: map-get($map: $font-size, $key: "sm");
+    font-weight: $font-weight-bolder;
+    letter-spacing: .5px;
     color: $body-color;
 
     text-transform: uppercase;
